Bug 197479 - When using an auto bbc field, the cursor should not be put there, but in the to: field
Summary: When using an auto bbc field, the cursor should not be put there, but in the ...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.11.90
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-22 09:59 UTC by Gandalf Lechner
Modified: 2009-09-27 21:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gandalf Lechner 2009-06-22 09:59:41 UTC
Version:           1.11.90 (using 4.2.91 (KDE 4.2.91 (KDE 4.3 >= 20090609)) "release 1", KDE:KDE4:UNSTABLE:Desktop / openSUSE_11.0)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.25.20-0.4-default

When using automatic bbc to some email-adress, this bbc is listed as the first recipient field in all emails you write with kmail. But when you open the editor for writing a new email, the cursor is always placed at the of this bbc entry rather than in the empty to: field. So the user has to click into the address field and cannot start typing the address right away - a really small but still annoying bug.
Comment 1 Martin Koller 2009-09-27 20:31:11 UTC
Can you tell me what "automatic bbc" is ?
What do I have to do to reproduce the problem ?
Comment 2 Gandalf Lechner 2009-09-27 21:12:19 UTC
With "auto bcc" I mean the following feature: Whenever you send an email to someone, this mail will also be send as bcc, i.e. hidden copy unvisible to other recipients, to a configured adress. You can set this adress when configuring your identities in kmail, in the "advanced" tab.

The (small but annoying) problem is: When you use this feature, the blindcopy adress is listed as the first adress to receive the mail, and the cursor is put into this field. So to enter the adress of the "real" participant, you have to click into the next adress field instead of just starting to type.

Hope that makes clear what I mean ..
Comment 3 Martin Koller 2009-09-27 21:54:07 UTC
SVN commit 1028641 by mkoller:

BUG: 197479

make sure the composer window sets the focus to the last field on startup
(e.g. not on the BCC field but on the To field)



 M  +1 -1      kmcomposewin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028641