BUG: 197479

make sure the composer window sets the focus to the last field on startup
(e.g. not on the BCC field but on the To field)


svn path=/trunk/KDE/kdepim/; revision=1028641